# bitmango-trade-cli

./: .gitignore  .whitelist  LICENSE  NOTICE.txt  README.md  SECURITY.md  TRADE-CLI.md  install-bitmango-macos.command  install-bitmango.ps1  install-bitmango.sh  pyproject.toml  requirements.txt  setup-env-macos.command  setup-env.ps1  setup_env.sh  trade-cli
bitmango-cli/: __init__.py  config.py  demo_helper.py  license.py  output.py  tutorial_engine.py  vault.py
config/: api_keys.py.example  config.env.example  exchange_health.json
demo/: walkthrough.py
docs/: TESTING-GUIDE.md  agent_fix_instructions.md  deploy-free.md  deploy-map.md  exchanges.md  release-strategy.md  test-results.md
testing/: audit_exchange_timeframes.py  audit_symbol_mappings.py  audit_technical_mandates.py  chaos_report.md  chaos_results.csv  check_console.py  comprehensive_free.py  dashboard_smoke_test.py  e2e_test.py  generate_wiki_report.py  manual_test_results.md  phemex_audit_report.md  phemex_test_report.md  run_all_tests.py  run_manual_tests.py  test-results-binance-live.md  test-results-binance-sandbox.md  test-results-bitfinex-live.md  test-results-bitfinex-sandbox.md  test-results-bybit-live.md  test-results-bybit-sandbox.md  test-results-mexc-live.md  test-results-mexc-sandbox.md  test-results-phemex-live.md  test-results-phemex-sandbox.md  test_dashboard_console.py  test_dashboard_integrity.py  test_helper.py  test_json_errors.py  test_proxy_mode.py  test_risk_manager.py  test_vault_ui.py  validate_json_schema.py  verification_results.json
tutorials/: account.py  config.py  (+6 more)
(+162 files in other folders)
